--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                   <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#Shoes">Shoes</a>
+                  <a class="nav-link" href="#shoes">Shoes</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#Backpack">Backpack</a>
@@ -111,6 +111,90 @@
         </div>
     </div>
     
+    <div class="container shoes" id="shoes">
+        <h3>Shoes</h3>
+        <div class="card-deck">
+            <div class="card">
+              <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Suplly 350</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5>$120</h5>
+                <button class="buy-now">Buy Now >></button>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Nike 360</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <h5>$320</h5>
+                <button class="buy-now">Buy Now >></button>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Red Airmax</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <h5>$350</h5>
+                <button class="buy-now">Buy Now >></button>
+              </div>
+            </div>
+          </div>
+    </div>
+
+    <div class="container" id="Backpack">
+        <h3>Backpack</h3>
+        <div class="card-deck">
+            <div class="card">
+              <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Red Backpack</h5>
+                <h5>%120</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              <div class="card-footer">
+                <button class="buy-now">Buy Now >></button>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Blue Backpack</h5>
+                <h5>$320</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              </div>
+              <div class="card-footer">
+                <button class="buy-now">Buy Now >></button>
+              </div>
+            </div>
+            <div class="card">
+              <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Black Backpack</h5>
+                <h5>$169</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              </div>
+              <div class="card-footer">
+                <button class="buy-now">Buy Now >></button>
+              </div>
+            </div>
+          </div>
+    </div>
+
+    <div class="container d-flex align-items-center justify-content-center bg-color" id="contactus">
+       <div>
+        <h3>LET'S STAY IN TOUCH</h3>
+        <h6>Get updates on sales, Spesials and more</h6>
+        <input class="form-control" type="text">
+        <button class="buy-now">SUBMIT</button>
+       </div>
+    </div>
+
+    <footer>
+        <small>©2020. panda commerce. All rights reserved </small>
+    </footer>
     
 
 
